--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hal-wang/funceb",
-  "version": "0.1.0",
-  "description": "云函数变静态网站",
+  "version": "1.0.0",
+  "description": "使用 nodejs (云函数, koa, express, ...) 托管静态网站",
   "homepage": "https://github.com/hal-wang/funceb",
   "repository": {
     "type": "git",
