feat: add encoding

--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -5,5 +5,5 @@ RUN npm install
 EXPOSE 3000
 CMD ["npm", "start"]
 
-# docker build -t funceb_demo .
+# docker build -t funceb_demo:latest .
 # docker run -d -p 3000:3000 funceb_demo
